[package]
name = "include-oracle-sql"
description = "A Yesql inspired macro for using Oracle SQL in Rust" 
version = "0.1.0"
authors = ["Alex Demenchuk <alexander.demenchuk@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["database","sql","macro","oracle"]
categories = ["database"]
repository = "https://github.com/quietboil/include-oracle-sql"
homepage = "https://quietboil.github.io/include-oracle-sql" 

[dependencies]
include-sql = { version = "0.2", path = "../include-sql" }
include-oracle-sql-args = { version = "0.1", path = "../include-oracle-sql-args" }

[dev-dependencies]
sibyl = { version = "0.6", features = ["blocking"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
